[package]
name = "trans-gen"
version = "0.5.0-alpha.1"
authors = ["kuviman <kuviman@gmail.com>"]
description = "Generating trans code from Rust into other languages"
license = "MIT"
homepage = "https://github.com/kuviman/trans-gen"
edition = "2018"

[dev-dependencies]
clap = "3.0.0-beta"

[dependencies]
trans = { path = "trans", version = "0.5.0-alpha" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.5"
templing = "0.1.0-alpha"
tempfile = "3"
anyhow = "1"