[package]
name = "trans-schema"
version = "0.1.0"
authors = ["kuviman <kuviman@gmail.com>"]
description = "Generating trans schema from Rust code"
license = "MIT"
homepage = "https://github.com/kuviman/trans-gen"
edition = "2018"

[dependencies]
heck = "0.3"
trans-schema-derive = { path = "derive", version = "0.1.0" }
once_cell = "1"