[package]
name = "trans-schema"
version = "0.3.0-alpha.0"
authors = ["kuviman <kuviman@gmail.com>"]
description = "Generating trans schema from Rust code"
license = "MIT"
homepage = "https://github.com/kuviman/trans-gen"
edition = "2018"

[dependencies]
heck = "0.3"
trans-schema-derive = { path = "derive", version = "0.3.0-alpha" }
once_cell = "1"