[package]
name = "trans"
version = "0.5.0-alpha.0"
authors = ["kuviman <kuviman@gmail.com>"]
description = "Serialization protocol for inter-language communication"
license = "MIT"
homepage = "https://github.com/kuviman/trans-gen"
edition = "2018"

[dependencies]
trans-derive = { path = "derive", version = "0.5.0-alpha" }
byteorder = "1"
once_cell = "1"
heck = "0.3"
anyhow = "1"
thiserror = "1"