[package]
name = "trans"
version = "0.5.0-alpha.0"
edition = "2021"

[dependencies]
trans-derive = { path = "derive", version = "0.5.0-alpha" }
byteorder = "1"
once_cell = "1"
heck = "0.3"
anyhow = "1"
thiserror = "1"
tynm = "0.1"
semver = "0.11"
batbox = { git = "https://github.com/geng-engine/batbox" }
serde = "1"
