[package]
name = "trans-gen-dlang"
version = "0.3.0-alpha.1"
authors = ["kuviman <kuviman@gmail.com>"]
description = "Generating D trans code"
license = "MIT"
homepage = "https://github.com/kuviman/trans-gen"
edition = "2018"

[dependencies]
trans-gen-core = { path = "../../core", version = "0.3.0-alpha" }