[package]
name = "trans-gen-fsharp"
version = "0.3.0-alpha.1"
authors = ["kuviman <kuviman@gmail.com>"]
description = "Generating F# trans code"
license = "MIT"
homepage = "https://github.com/kuviman/trans-gen"
edition = "2018"

[dependencies]
trans-gen-core = { path = "../../core", version = "0.3.0-alpha" }