[package]
name = "trans-gen-java"
version = "0.3.0-alpha.2"
authors = ["kuviman <kuviman@gmail.com>"]
description = "Generating Java trans code"
license = "MIT"
homepage = "https://github.com/kuviman/trans-gen"
edition = "2018"

[dependencies]
trans-gen-core = { path = "../../core", version = "0.3.0-alpha" }