[package]
name = "trans-gen-python"
version = "0.3.0-alpha.0"
authors = ["kuviman <kuviman@gmail.com>"]
description = "Generating Python trans code"
license = "MIT"
homepage = "https://github.com/kuviman/trans-gen"
edition = "2018"

[dependencies]
trans-gen-core = { path = "../../core", version = "0.3.0-alpha" }