[package]
name = "trans-gen-rust"
version = "0.1.0"
authors = ["kuviman <kuviman@gmail.com>"]
description = "Generating Rust trans code"
license = "MIT"
homepage = "https://github.com/kuviman/trans-gen"
edition = "2018"

[dependencies]
include_dir = "0.2"
trans-gen-core = { path = "../../core", version = "0.1.0" }