[package]
name = "trans-derive"
version = "0.2.0"
authors = ["kuviman <kuviman@gmail.com>"]
description = "Serialization protocol for inter-language communication (derive macros)"
license = "MIT"
homepage = "https://github.com/kuviman/trans-gen"
edition = "2018"

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[lib]
proc-macro = true
